about us finished

--- a/src/layouts/Landing/about us/index.html
+++ b/src/layouts/Landing/about us/index.html
@@ -185,9 +185,26 @@
         <section class="how-to-buy">
             <h2>¿Cómo comprar?</h2>
             <div class="how-to-buy-container">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <img src="../../../../public/images/icons/howto1.svg">
+                    <h5>Por categorias</h5>
+                    <p>
+                        Navega a través de la barra de categorías que encontrarás en la parte superior
+                    </p>
+                </div>
+                <div>
+                    <img src="../../../../public/images/icons/howto2.svg">
+                    <h5>Con el buscador</h5>
+                    <p>
+                        Con esta herramienta podrás escribir el producto que necesites y de inmediato te propondremos productos y marcas
+                    </p>
+                </div>
+                <div><img src="../../../../public/images/icons/howto3.svg">
+                    <h5>Nuestras Recomendaciones</h5>
+                    <p>
+                        Nos basamos en tus gustos y preferencias, ademas te mostramos los productos mas populares de Drinkers
+                    </p>
+                </div>
             </div>
         </section>
 
