--- a/src/routes/user/terms.ejs
+++ b/src/routes/user/terms.ejs
@@ -14,7 +14,7 @@
 <body>
     <%- include('../partials/user-header') %>
 
-    <img id="whatsappIcon" src="../../../../public/images/icons/whatsapp.svg">
+    <img id="whatsappIcon" src="/images/icons/whatsapp.svg">
 
     <div id="values">
         <section id="dolars" class="value">$</section>
@@ -72,6 +72,6 @@
     </main>
 
     <%- include('../partials/footer') %>
-    <script src="../content.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
