--- a/src/routes/partials/footer.ejs
+++ b/src/routes/partials/footer.ejs
@@ -1,14 +1,14 @@
 <footer>
     <h3>Atención al cliente</h3>
     <ul>
-        <li>0000-000000000</li>
+        <li>+34 123 456 789</li>
         <li>Hora de ATC: 24h</li>
         <li>Horarios de entrega: Valencia, Naguanagua y San Diego: 24h</li>
         <li>Envío en menos de 3 horas gratis el mismo día</li>
         <li>¿Quienes somos?</li>
         <li onclick="window.location.href='/faq'">Preguntas Frecuentes</li>
         <li>Zona de repartos</li>
-        <li>Términos y Condiciones</li>
+        <li onclick="window.location.href='/terms'">Términos y Condiciones</li>
         <li>Políticas de Privación</li>
         <li>Políticas de Devolución</li>
     </ul>
