--- a/src/routes/partials/footer.ejs
+++ b/src/routes/partials/footer.ejs
@@ -5,12 +5,12 @@
         <li>Hora de ATC: 24h</li>
         <li>Horarios de entrega: Valencia, Naguanagua y San Diego: 24h</li>
         <li>Envío en menos de 3 horas gratis el mismo día</li>
-        <li>¿Quienes somos?</li>
+        <li onclick="window.location.href='/about'">¿Quienes somos?</li>
         <li onclick="window.location.href='/faq'">Preguntas Frecuentes</li>
         <li>Zona de repartos</li>
         <li onclick="window.location.href='/terms'">Términos y Condiciones</li>
-        <li>Políticas de Privación</li>
-        <li>Políticas de Devolución</li>
+        <li onclick="window.location.href='/privacy'">Políticas de Privación</li>
+        <li onclick="window.location.href='/returns'">Políticas de Devolución</li>
     </ul>
 
     <section>
