--- a/src/routes/index.ejs
+++ b/src/routes/index.ejs
@@ -12,14 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <%- include('./partials/user-header') %>
 
-    <img id="whatsappIcon" src="/images/icons/whatsapp.svg">
+    <%- include('./partials/chat') %>
 
-    <div id="values">
-        <section id="dolars" class="value">$</section>
-        <section id="bs" class="value">bs</section>
-    </div>
+    <%- include('./partials/convert') %>
 
     <%- include('./partials/cart') %>
 
