--- a/src/routes/partials/product.ejs
+++ b/src/routes/partials/product.ejs
@@ -5,7 +5,7 @@
         <button onclick="addProduct()">Agregar</button>
     </div>
     <h4><%= producto.nombre_producto %></h4>
-    <h5>Desde <%= producto.precio_detal %></h3>
+    <h5 class="product-price">Desde <%= producto.precio_detal %></h3>
 </li>
 <script>
     //Funcion para agregar un producto al carrito y al SessionStorage
