--- a/src/routes/user/producto.ejs
+++ b/src/routes/user/producto.ejs
@@ -15,12 +15,9 @@
     
     <%- include('./partials/user-header') %>
 
-    <img id="whatsappIcon" src="/images/icons/whatsapp.svg">
+    <%- include('./partials/chat') %>
 
-    <div id="values">
-        <section id="dolars" class="value">$</section>
-        <section id="bs" class="value">bs</section>
-    </div>
+    <%- include('./partials/convert') %>
 
     <%- include('./partials/cart') %>
 
