--- a/src/routes/partials/catalogo.ejs
+++ b/src/routes/partials/catalogo.ejs
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <body>
-    <%- include('./partials/user-header') %>
+    <%- include('./user-header') %>
 
-    <%- include('./partials/chat') %>
+    <%- include('./chat') %>
 
-    <%- include('./partials/convert') %>
+    <%- include('./convert') %>
 
-    <%- include('./partials/cart') %>
+    <%- include('./cart') %>
 
     <main>
         <p style="padding-left: 3vmin;">Sección > <%= type %></p>
