Arreglando Formato de la Respuesta

--- a/src/routes/partials/chat.ejs
+++ b/src/routes/partials/chat.ejs
@@ -7,6 +7,6 @@
     </div>
 </div>
 <div id="chatIcon" onclick="toggleChatbot()">
-    💬
+    <img width="32" height="32" src="https://img.icons8.com/badges/48/chat.png" alt="chat"/>
 </div>
 <script src="/js/user/chat.js"></script>
