--- a/src/routes/partials/header.ejs
+++ b/src/routes/partials/header.ejs
@@ -2,6 +2,20 @@
 <header>
     <div class="Content__header">
         <img alt="Logo" src="/images/Logo/Logo.png">
-        <a href="/">Salir</a>
+        <a style="cursor: pointer;" onclick="leaveAdmin()">Salir</a>
     </div>
 </header>
+<script>
+    async function leaveAdmin() {
+        const response  = await fetch('/logout', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                credentials: 'include' 
+        }).then(res => res.json());
+        if(response.mensaje) {
+            window.location.href = '/';
+        }
+    }
+</script>
