Fixing algunas cosas y falta problemas proveedor

--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -21,6 +21,7 @@
                         <tr>
                             <td><%= aviso.titulo %></td>
                             <td><%= aviso.fecha.toLocaleDateString() %></td>
+                            <td><%= aviso.tipo %></td>
                         </tr>
                     <% }); %>
                 </table>
