--- a/src/routes/partials/header.ejs
+++ b/src/routes/partials/header.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/admin/header.css">
 <header>
     <div class="Content__header">
-        <img alt="Logo" src="/images/Logo/Logo.png">
+        <img style="cursor: pointer;" onclick="window.location.href='/admin/dashboard'" alt="Logo" src="/images/Logo/Logo.png">
         <a style="cursor: pointer;" onclick="leaveAdmin()">Salir</a>
     </div>
 </header>
