Fixing Static Pages

--- a/src/routes/user/returns.ejs
+++ b/src/routes/user/returns.ejs
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <body>
-    <%- include('./partials/user-header') %>
+    <%- include('../partials/user-header') %>
 
-    <%- include('./partials/chat') %>
+    <%- include('../partials/chat') %>
 
-    <%- include('./partials/convert') %>
+    <%- include('../partials/convert') %>
 
-    <%- include('./partials/cart') %>
+    <%- include('../partials/cart') %>
 
     <main>
         <h1>Política de Devoluciones y Reembolsos de Drinkers</h1>
