--- a/src/routes/user/producto.ejs
+++ b/src/routes/user/producto.ejs
@@ -13,13 +13,13 @@
 </head>
 <body>
     
-    <%- include('./partials/user-header') %>
+    <%- include('../partials/user-header') %>
 
-    <%- include('./partials/chat') %>
+    <%- include('../partials/chat') %>
 
-    <%- include('./partials/convert') %>
+    <%- include('../partials/convert') %>
 
-    <%- include('./partials/cart') %>
+    <%- include('../partials/cart') %>
 
     <main>
         <div class="principal-container">
