--- a/src/routes/partials/catalogo.ejs
+++ b/src/routes/partials/catalogo.ejs
@@ -45,5 +45,6 @@
     <%- include('./footer') %>
 
     <script src="/js/index.js"></script>
+    <script src="/js/user/catalogo.js"></script>
 </body>
 </html>
