Arreglando Categorias del Header

--- a/src/routes/partials/user-header.ejs
+++ b/src/routes/partials/user-header.ejs
@@ -5,8 +5,7 @@
             <option value="Ron">Ron</option>
             <option value="Whisky">Whisky</option>
             <option value="Vinos">Vinos</option>
-            <option value="Sidra">Sidra</option>
-            <option value="Brandy">Brandy</option>
+            <option value="Baseron">BasedeRon</option>
             <option value="Vodka">Vodka</option>
             <option value="Sangría">Sangría</option>
             <option value="Anis">Anis</option>
@@ -24,10 +23,9 @@
             <li><a href="/catalogo?type=Ron">RON</a></li>
             <li><a href="/catalogo?type=Whisky">WHISKY</a></li>
             <li><a href="/catalogo?type=Vinos">VINOS</a></li>
-            <li><a href="/catalogo?type=Sidra">SIDRA</a></li>
-            <li><a href="/catalogo?type=Brandy">BRANDY</a></li>
+            <li><a href="/catalogo?type=Baseron">BASE DE RON</a></li>
             <li><a href="/catalogo?type=Vodka">VODKA</a></li>
-            <li><a href="/catalogo?type=Sangría">SANGRÍA</a></li>
+            <li><a href="/catalogo?type=Sangria">SANGRIA</a></li>
             <li><a href="/catalogo?type=Anis">ANIS</a></li>
             <li><a href="/catalogo?type=Aguardiente">AGUARDIENTE</a></li>
         </ul>
